# iwell-deo

./: .codeclimate.yml  .dockerignore  .env.development  .gitignore  .pylintrc  Dockerfile  Dockerfile.chamber  Makefile  Pipfile  README.md  config.yaml  docker-compose.local.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  run.bat
.circleci/: config.yml
.github/: dependabot.yml
.old/: exploration.py
.old/production_crutch/: hackload.py
config/: collector.dev.yaml  collector.yaml  config.yaml  logging.yaml  token.yaml
iWell/: Untitled.ipynb  config.yaml
iWell/production_crutch/: hackrun.bat
iWell/src/: config.py  dbagents.py  requestor.py
iwell/: __init__.py  __main__.py  config.py  loggers.py  manage.py  sentry.py  wsgi.py
iwell/api/: model_mixins.py  models.py
iwell/api/resources/: __init__.py  endpoints.py  health.py  jobs.py  views.py
iwell/celery_queue/: task.py  worker.py
iwell/collector/: collector.py  endpoint.py  request.py  requestor.py  tasks.py  token_manager.py  transformer.py  util.py  yammler.py
iwell/metrics/: __init__.py  metrics.py
iwell/old/: config.py  controller.py  dbagents.py  loggers.py  response.py  yammler.py
iwell/util/: __init__.py  itertools_.py  jsontools.py  sqs.py  stringprocessor.py
migrations/: env.py
migrations/versions/: 20d38cfe7b17_.py  5d5011b0476c_.py  6ce83ad65bc1_.py  70c7338dd26c_.py  7a5508ba53b2_.py  83d80f9938d3_.py  8d5aa15ebdce_.py  9b34279207eb_.py  a1bbfc2ee006_.py  a3391c68e2b9_.py  bf7473dbd8fd_.py  c703573fa13d_.py  cb2f57b25612_.py  cf431d1cf0e1_.py  cfec89b6878b_.py  d78f6bcc7f5a_.py  e211f751fb27_.py  e4ad63130045_.py  f0461bdb269b_.py  ff97e8d15fde_.py
production_crutch/: config.yaml  hackrequest.py
scripts/: deploy.py  release.py  run.ps1
src/: config.py  controller.py  dbagents.py  log.py  loggers.py  requestor.py  retry.py  sentry.py  settings.py  temp.py  version.py
terraform/: cloudwatch.tf  ecs.tf  main.tf  service_discovery.tf  sqs.tf  variables.tf
terraform/service_target_tracking/: main.tf
test/: __init__.py  conftest.py  test_collector.py  test_endpoint.py  test_iwell_requestor.py  test_requestor.py  test_token_manager.py  test_transformer.py
test/data/: collector.yaml  nested_data.json  normalized.json
tests/: conftest.py  test_collector.py  test_endpoint.py  test_iwell_requestor.py  test_jsontools.py  test_request.py  test_requestor.py  test_sentry.py  test_stringprocessor.py  test_token_manager.py  test_transformer.py  test_util.py  test_worker.py
tests/data/: collector.yaml  nested_data.json  normalized.json
