[tool.poetry]
name = "iwell"
version = "0.1.1"
description = ""
authors = ["Brock Friedrich <brock@driftwoodenergy.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "*"
requests = "*"
requests-oauthlib = "==1.0.0"
pandas = "*"
sqlalchemy = "==1.2.18"
oauthlib = "*"
click = "*"
psycopg2-binary = "^2.8"
flask = "^1.1"
Flask-SQLAlchemy = "^2.4"
flask-debugtoolbar = "*"
flask-migrate = "*"
Flask-RESTful = "*"
python-dotenv = "^0.10.3"
attrdict = "^2.0"
redis = "^3.3"
flower = "^0.9.3"
requests_mock = "^1.7"
tomlkit = "^0.5.8"
logutils = "^0.3.5"
pyparsing = "^2.4"
attrs = "^19.3"
datadog = "^0.31.0"
celery = {version = "^4.3.0", extras = ["sqs"]}
json_log_formatter = "^0.2.0"
pylint_flask_sqlalchemy = "^0.1.0"
sentry-sdk = "^0.17.6"
gunicorn = "^20.0.4"
cron-descriptor = "^1.2.24"
humanize = "^0.5.1"


[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
mypy = "*"
ipython = "*"
matplotlib = "*"
pytest = "^5.2"
requests-mock = "^1.7"
pytest-cov = "^2.8"
coverage = {version = "^5.0", extras = ["toml"]}
docker = "^4.1.0"
boto3 = "^1.10.6"
hypothesis = "^4.42.7"
pylint_flask_sqlalchemy = "^0.1.0"
flake8 = "^3.7.9"


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if self.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "logger.debug",
    "if 0:",
    "if __name__ == .__main__.:"
]


[tool.poetry.scripts]
iwell = "iwell.manage:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


